<resources>
    <string name="app_name">Autonomy Way</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_transfers">Transfers</string>
    <string name="nav_incomes">Incomes</string>
    <string name="nav_expenses">Expenses</string>
    <string name="nav_wealth">Wealth</string>
    <string name="title_activity_income_list">Incomes</string>
    <string name="title_activity_wealth_list">Wealth</string>
    <string name="title_activity_expense_list">Expenses</string>
    <string name="rate">Rate:</string>
    <string name="income_rate">Income Rate</string>


    <string name="income_type_business">Business</string>
    <string name="income_type_work">Work</string>
    <string name="cash_error">Invalid Number</string>

    <string name="title_new_income_activity">New Income Form</string>
    <string name="title_edit_income_activity">Edit Income Form</string>
    <string name="income_input_name">Name *</string>
    <string name="income_name_error">Name is required</string>
    <string name="income_input_cash">Recurrent Cash: Fill if you receive same value for this work</string>
    <string name="label_time">Recurrent Time</string>
    <string name="label_income_type">Type of Income</string>

    <string name="work_explanation">Work - Need to spent time to make money. Ex: working in a company, running a business in person.</string>
    <string name="business_explanation">Business - Little or no work to make money. Ex: stocks, rent from real state, business ran by managers</string>
    <string name="button_save">Save</string>
    <string name="income_save_msg">Income saved. Create another or press back to return to income
        list</string>


    <string name="title_new_wealth_activity">New Wealth Form</string>
    <string name="title_edit_wealth_activity">Edit Wealth Form</string>
    <string name="wealth_input_name">Name *</string>
    <string name="wealth_name_error">Name is required</string>
    <string name="wealth_initial_balance_input">Initial Cash</string>
    <string name="form_error_msg">There are errors, check red inputs</string>
    <string name="wealth_balance">Balance</string>
    <string name="wealth_save_msg">Wealth saved. Create another or press back to return to wealth list</string>
    <string name="transfer_save_msg">Transfer saved. Create another or press back to return to
        Dashboard</string>

    <string name="title_new_expense_activity">New Expense Form</string>
    <string name="title_new_transfer_activity">New Transfer Form</string>
    <string name="title_activity_transfer_list">Transfers</string>
    <string name="title_edit_transfer_activity">Edit Transfer Form</string>
    <string name="title_edit_expense_activity">Edit Expense Form</string>
    <string name="positive_amount_err_msg">Must be a positive amount</string>

    <string name="expense_save_msg">Expense saved. Create another or press back to return to expense list</string>
    <string name="expense_name_error">Name is required</string>
    <string name="expense_input_name">Name *</string>
    <string name="transfer_cash_input">Cash Amount *</string>
    <string name="transfer_input_detail">Detail. Ex: Month Salary, Groceries </string>
    <string name="expense_recurrent_cash_input">Recurrent Expense: Fill if you expend same value
        on this expense</string>
    <string name="expense_rate">Expense Rate</string>
    <string name="metric_not_enough_data_available">Not enough data available</string>
    <string name="metric_autonomy_reached">Autonomy reached, can live without working with current expense rate</string>
    <string name="hour">hour</string>
    <string name="hour_plural">hours</string>
    <string name="month">month</string>
    <string name="month_plural">months</string>
    <string name="year">year</string>
    <string name="year_plural">years</string>
    <!-- Inital values when user first enter the app -->
    <!-- Income -->
    <string name="income_init_salary">Salary</string>
    <string name="income_init_stocks">Stock Interest</string>

    <!-- Wealth -->
    <string name="wealth_init_bank_account">Bank Account</string>
    <string name="wealth_init_car">Car</string>
    <string name="wealth_init_credit_card">Credit Card</string>
    <string name="wealth_init_house">House</string>
    <string name="wealth_init_stocks">Stocks</string>
    <string name="wealth_init_wallet">Wallet</string>
    <!--<string name="wealth_"></string>-->

    <!-- Expenses -->
    <string name="expense_init_car_expenses">Car Expenses</string>
    <string name="expense_init_children">Children</string>
    <string name="expense_init_depreciation">Depreciation</string>
    <string name="expense_init_health">Health</string>
    <string name="expense_init_house_expenses">House Expenses</string>
    <string name="expense_init_leisure">Leisure</string>
    <string name="expense_init_taxes">Taxes</string>
    <string name="time_spent_to_get_income">Time spent to get income</string>
    <string name="transfer_origin">Origin *</string>
    <string name="transfer_destination">Destination *</string>
    <string name="select_origin">Select origin</string>
    <string name="select_destination">Select destination</string>
    <string name="date_input_label">Date *</string>
    <string name="transfer_cash">Cash</string>
    <string name="transfer_duration">Duration:</string>
    <string name="work_free_time">Work-free time</string>
    <string name="duration_input_hours">Hours</string>
    <string name="duration_input_minutes">Minutes</string>
    <string name="total_wealth">Total wealth</string>
    <string name="work_rate">Work Rate</string>
    <string name="business_rate">Business Rate</string>
    <string name="mandatory_work_time">Mandatory Work Time</string>
    <string name="touch_each_metric_to_check_its_explanation">Touch each metric to check its explanation</string>
    <string name="work_free_time_help">Time you would survive without working. E.g., if your work rate is 0 and you count only on business rate and expending all your wealth to pay your current expense rate</string>
    <string name="mandatory_work_time_help">Time you need work each month to cover current expense rate without expending wealth.</string>
    <string name="expense_rate_help">Average of your expenses on last 364 days</string>
    <string name="business_rate_help">Average of your businesses on last 364 days</string>
    <string name="income_rate_help">Average of all your income (business + work) on last 364 days</string>
    <string name="total_wealth_help">Sum of all your wealth balances</string>
    <string name="work_rate_help">Average of your work cash divided by worked time, on last 364 days</string>
    <string name="git_link" translatable="false">https://github.com/renzon/autonomyway</string>
    <string name="nav_restore">Restore Database</string>
    <string name="nav_export">Export Database</string>
    <string name="export_to">Export Database</string>
    <string name="restore_database">Restore Database</string>
    <string name="database_restore_error">An error ocurred database restore aborted</string>
    <string name="database_restore_success">Database restored</string>
    <!--<string name="expense_init_"></string>-->
</resources>
