<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Form"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.autonomyway.component.income.NewIncomeActivity"
    tools:showIn="@layout/income_activity_form">

    <!--<TextView-->
    <!--android:text="@string/label_name"-->
    <!--/>-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/income_name_layout"
        style="@style/FormLabel"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/income_name_input"
            style="@style/FormTextInput"
            android:hint="@string/income_input_name"
            android:inputType="textAutoCorrect" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/FormLabel"
        app:errorEnabled="true"
        android:id="@+id/income_cash_layout">

        <com.autonomyway.component.common.CashInput
            android:id="@+id/income_cash_input"
            style="@style/FormTextInput"
            android:hint="@string/income_input_cash" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        style="@style/FormLabel"
        android:text="@string/label_time" />

    <com.autonomyway.component.common.DurationInput
        android:id="@+id/income_duration_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/FormLabel"
        android:text="@string/label_income_type" />

    <RadioGroup
        android:id="@+id/income_type_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:text="@string/work_explanation" />

        <RadioButton
            android:id="@+id/radio_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/business_explanation" />
    </RadioGroup>

    <Button
        android:id="@+id/save_button"
        style="@style/FormButton.Income"
        android:text="@string/button_save" />


</LinearLayout>
